--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9dbc8c">  <td>22/08/04 12:23:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateTitleTest.validateHeader()[pri:0, instance:academy.ValidateTitleTest@19fe4644]">validateHeader</td> 
-  <td>main@407148497</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/08/04 12:23:06</td>   <td>29</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateTitleTest.TeardownEnv()[pri:0, instance:academy.ValidateTitleTest@19fe4644]">&lt;&lt;TeardownEnv</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@407148497</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/08/04 12:22:30</td>   <td>-36661</td> <td>&nbsp;</td><td title="&gt;&gt;ValidateTitleTest.initilizeandlaunch()[pri:0, instance:academy.ValidateTitleTest@19fe4644]">&gt;&gt;initilizeandlaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@407148497</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/08/04 12:23:06</td>   <td>-33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateTitleTest.getTitleTxt()[pri:0, instance:academy.ValidateTitleTest@19fe4644]">getTitleTxt</td> 
-  <td>main@407148497</td>   <td></td> </tr>
+<tr bgcolor="98ac89">  <td>22/09/01 11:52:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FactorialNo.factorial()[pri:0, instance:academy.FactorialNo@4efc180e]">factorial</td> 
+  <td>main@1150963491</td>   <td></td> </tr>
 </table>
